# Sound-Recognition-System

./: .editorconfig  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Model.py  README.md  dataset.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pipeline.yml
src/: train.py
src/ml_project/models/: Model2.py
