[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "[prosjekt-navn]"
version = "0.1.0"
description = "[En kort beskrivelse av hva prosjektet gjør]"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "[Ditt Navn]", email = "[din@epost.no]"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Legg til biblioteker her, f.eks:
    # "requests>=2.28.0",
    # "pandas>=1.5.0",
]

[project.urls]
"Homepage" = "https://github.com/[ditt-brukernavn]/[prosjekt-navn]"
"Bug Tracker" = "https://github.com/[ditt-brukernavn]/[prosjekt-navn]/issues"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
